# raspberrypi-printing-server

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.json  setup.sh
docs/superpowers/specs/: 2026-04-15-raspberry-pi-printer-server-design.md
scripts/: fetch-vendor.sh  harden-cups.sh
src/: main.c  server.c  server.h  types.h
src/helpers/: escpos.c  escpos.h  image.c  image.h  response.c  response.h
src/routes/: discovery.c  discovery.h  print.c  print.h  printers.c  printers.h
src/services/: cert_service.c  cert_service.h  cups_service.c  cups_service.h  print_service.c  print_service.h  printer_config.c  printer_config.h
systemd/: printer-server.service
www/: index.html  printer-discovery.js  setup.html
